--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,8 +6,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  scrollbar-width: auto;
-  scrollbar-color: $clr__border;
 }
 
 // /* ===== Scrollbar CSS ===== */
@@ -37,10 +35,7 @@ body {
   min-width: 100%;
   width: 100%;
   margin: 0 auto;
-
-  // @include breakpoint(48em) {
-  //   overflow: hidden;
-  // }
+  overflow-y: scroll;
 }
 
 h1,
